--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.9",
+    "morgan": "^1.10.0",
     "url-slug": "^3.0.2",
     "validator": "^13.6.0"
   },
