--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
+    "split": "^1.0.1",
     "url-slug": "^3.0.2",
     "validator": "^13.6.0"
   },
